--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,9 @@
       <height>301</height>
      </rect>
     </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
    </widget>
    <widget class="QListWidget" name="QueueList">
     <property name="geometry">
@@ -190,6 +193,19 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>560</y>
+      <width>80</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SetPivo</string>
     </property>
    </widget>
   </widget>
