--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,12 @@
       <height>301</height>
      </rect>
     </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::ExtendedSelection</enum>
+    </property>
+    <property name="selectionRectVisible">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QListWidget" name="QueueList">
     <property name="geometry">
