--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,6 +16,14 @@
   <property name="windowTitle">
    <string>PivoPlayer</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QMainWindow {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 5px;
+    border-color: #afafaf;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QListWidget" name="MusicList">
     <property name="geometry">
@@ -25,6 +33,40 @@
       <width>201</width>
       <height>301</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListWidget
+{
+	color: white;
+	background-color: #2b2b2b;
+}
+QScrollBar:vertical {              
+    border: none;
+    background:white;
+    width:3px;
+    margin: 0px 0px 0px 0px;
+}
+QScrollBar::handle:vertical {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+    stop: 0 rgb(5, 35, 0), stop: 0.5 rgb(21, 90, 0), stop:1 rgb(5, 35, 0));
+    min-height: 0px;
+}
+QScrollBar::add-line:vertical {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+    stop: 0 rgbrgb(21, 90, 0), stop: 0.5 rgb(21, 90, 0),  stop:1 rgbrgb(21, 90, 0));
+    height: 0px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
+}
+QScrollBar::sub-line:vertical {
+    background: rgb(5, 35, 0)
+    height: 0 px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}</string>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::ExtendedSelection</enum>
@@ -42,6 +84,40 @@
       <height>301</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QListWidget
+{
+	color: white;
+	background-color: #2b2b2b;
+}
+QScrollBar:vertical {              
+    border: none;
+    background:white;
+    width:3px;
+    margin: 0px 0px 0px 0px;
+}
+QScrollBar::handle:vertical {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+    stop: 0 rgb(5, 35, 0), stop: 0.5 rgb(21, 90, 0), stop:1 rgb(5, 35, 0));
+    min-height: 0px;
+}
+QScrollBar::add-line:vertical {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+    stop: 0 rgbrgb(21, 90, 0), stop: 0.5 rgb(21, 90, 0),  stop:1 rgbrgb(21, 90, 0));
+    height: 0px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
+}
+QScrollBar::sub-line:vertical {
+    background: rgb(5, 35, 0)
+    height: 0 px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}</string>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
    </widget>
    <widget class="QPushButton" name="addMusicButton">
     <property name="geometry">
@@ -51,6 +127,14 @@
       <width>80</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 5px;
+    border-color: #afafaf;
+}</string>
     </property>
     <property name="text">
      <string>Add files</string>
@@ -64,6 +148,15 @@
       <width>20</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
     </property>
     <property name="text">
      <string>⥁</string>
@@ -81,6 +174,15 @@
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
+    </property>
     <property name="text">
      <string>«</string>
     </property>
@@ -93,6 +195,15 @@
       <width>20</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
     </property>
     <property name="text">
      <string>ll</string>
@@ -107,6 +218,15 @@
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
+    </property>
     <property name="text">
      <string>»</string>
     </property>
@@ -119,6 +239,15 @@
       <width>20</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
     </property>
     <property name="text">
      <string>⤱</string>
@@ -136,6 +265,30 @@
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QSlider {
+
+	height: 20px;
+    border-radius: 8px;
+}
+
+QSlider::groove:horizontal {
+	height: 3px;
+	background: #646464;
+	border-radius: 13px;
+	border: 1px solid #313131;
+}
+
+QSlider::handle:horizontal {
+	border: 1px solid #212529; 
+	height: 4px;
+	width: 8px; 
+	border-radius: 4px; 
+	background: #fbfffa;  
+	margin-top: -4px; 
+	margin-bottom: -4px;
+}</string>
+    </property>
     <property name="maximum">
      <number>100</number>
     </property>
@@ -147,10 +300,34 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>50</y>
+      <y>26</y>
       <width>411</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QSlider {
+
+	height: 20px;
+    border-radius: 8px;
+}
+
+QSlider::groove:horizontal {
+	height: 3px;
+	background: #646464;
+	border-radius: 13px;
+	border: 1px solid #313131;
+}
+
+QSlider::handle:horizontal {
+	border: 1px solid #212529; 
+	height: 4px;
+	width: 8px; 
+	border-radius: 4px; 
+	background: #fbfffa;  
+	margin-top: -4px; 
+	margin-bottom: -4px;
+}</string>
     </property>
     <property name="maximum">
      <number>0</number>
@@ -162,11 +339,17 @@
    <widget class="QLabel" name="timing_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>90</y>
+      <x>20</x>
+      <y>50</y>
       <width>31</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel
+{
+	color: white;
+}</string>
     </property>
     <property name="text">
      <string/>
@@ -176,10 +359,16 @@
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>90</y>
+      <y>50</y>
       <width>41</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel
+{
+	color: white;
+}</string>
     </property>
     <property name="text">
      <string/>
@@ -188,11 +377,17 @@
    <widget class="QLabel" name="songname_label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
+      <x>30</x>
+      <y>10</y>
       <width>391</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel
+{
+	color: white;
+}</string>
     </property>
     <property name="text">
      <string/>
@@ -207,6 +402,15 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
+    </property>
     <property name="text">
      <string>new playlist</string>
     </property>
@@ -220,6 +424,15 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
+    </property>
     <property name="text">
      <string>pick playlist</string>
     </property>
@@ -232,6 +445,15 @@
       <width>61</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	color: white;
+    background-color: #2b2b2b;
+    border-width: 1px;
+    border-color:  #1f1f1f;
+	border-style: solid;
+}</string>
     </property>
     <property name="text">
      <string>default</string>
@@ -248,6 +470,12 @@
     </property>
     <property name="toolTip">
      <string/>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit
+{
+	border: none;
+}</string>
     </property>
     <property name="inputMask">
      <string/>
